# Calculatrice

./: .coverage  .gitignore  README.md  __init__.py  main.py  pyproject.toml
.github/workflows/: ci.yaml
soustraction_division/: __init__.py  add_div.py  div_op.py  mul_op.py  sous_op.py
src/: add_op.py  main.py
tests/: test_main.py  test_msa_add.py  test_msa_div.py  test_operation.py
